# backlog-app

./: .gitignore  README.md  app.py  conf.yaml  pyproject.toml
backlog_app/: entities.py  load.py  streamlit_pages.py  utils.py
data/: integrantes.csv  proyectos.csv  tareas.csv
